--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <li>I founded and managed my own business, a successful arts and crafts centre</li>
                             <li>I have proven, through my experience training in web development, that I am able to reinvent myself with confidence</li>
                         </ul>
-                    <a href="MelEatonCV2018_create.pdf" class="btn btn-xl download-btn" download>Download CV</a>
+                    <a href="MelEatonCV_2021.pdf" class="btn btn-xl download-btn" download>Download CV</a>
           </div>
         </div>
       </div>
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <h2></h2>
                 </span>
               </span>
-              <img class="img-fluid" src="img/1.jpeg" alt="">
+              <img class="img-fluid" src="img/1.jpg" alt="">
             </a>
           </div>
 
