--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Take a look at a selection of our previous projects </h3>
+                    <h3 class="section-subheading text-muted"><strong>CLICK</strong> to take a look at a selection of our previous projects </h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
