--- a/index.html
+++ b/index.html
@@ -332,6 +332,10 @@
                 </div>
             </div>
         </section>
+        <!-- Instagram Feed -->
+        <section class="page-section" id="Instagram">
+            <div id="curator-feed-default-feed-layout"></div>
+        </section>
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
@@ -793,6 +797,14 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        
+        <!-- Instagram feed -->
+        <script type="text/javascript">
+        /* curator-feed-default-feed-layout */
+        (function(){
+        var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
+        i.src="https://cdn.curator.io/published/dcc72362-2053-4148-b7ca-dfb0988fee99.js";
+        e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+        })();
+        </script>
     </body>
 </html>
