--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
                     <h4 class="section-subheading text-muted">We create artwork for your spaces</h4>
-                    <h3 class="section-subheading text-muted">Quality custom mural paintings for your home, business, school or community</h3>
+                    <h3 class="section-subheading text-muted">Quality custom mural paintings for your home, business, school or community here in New Zealand</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -328,7 +328,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Mel and Laura have teamed up on several project. Developing 'Off The Wall' is the natural result of their creative desire to paint the town and share their creativity!</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Mel and Laura are two North Canterbury, New Zealand based artists who have teamed up on several project during their awesome friendship. Developing 'Off The Wall' is the natural result of their creative desire to paint the town and share their creativity!</p></div>
                 </div>
             </div>
         </section>
