--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </section>
         <!-- Instagram Feed -->
         <section class="page-section" id="Instagram">
-            <div id="curator-feed-default-feed-layout"></div>
+            <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
         </section>
         <!-- Contact-->
         <section class="page-section" id="contact">
