--- a/index.html
+++ b/index.html
@@ -235,9 +235,10 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center"><a class="btn btn-primary btn-xl text-uppercase" href="https://www.facebook.com/OffTheWall.MuralsNZ" target="blank">UPCOMING PROJECTS</a></div>
+            <div class="text-center"><a class="btn btn-primary btn-xl text-uppercase" href="https://www.facebook.com/OffTheWall.MuralsNZ" target="blank">FRESH PAINT</a></div>
+            <h3 class="section-subheading text-muted">Check out our most recent work!</h3>
+            <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
         </section>
-        
         <!-- Commission -->
         <section class="page-section" id="commission">
             <div class="container">
@@ -331,10 +332,6 @@
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Mel and Laura are two North Canterbury, New Zealand based artists who have teamed up on several project during their awesome friendship. Developing 'Off The Wall' is the natural result of their creative desire to paint the town and share their creativity!</p></div>
                 </div>
             </div>
-        </section>
-        <!-- Instagram Feed -->
-        <section class="page-section" id="Instagram">
-            <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
         </section>
         <!-- Contact-->
         <section class="page-section" id="contact">
