--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
                 </div>
             </div>
             <div class="text-center"><a class="btn btn-primary btn-xl text-uppercase" href="https://www.facebook.com/OffTheWall.MuralsNZ" target="blank">FRESH PAINT</a></div>
-            <h3 class="section-subheading text-muted">Check out our most recent work!</h3>
+            <div class="text-center">
+                    <h3 class="section-subheading text-muted" style="padding-top: 30px;">Check out our most recent work</h3>
+                </div>
             <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
         </section>
         <!-- Commission -->
